Files revised per reviewer comments
Added (article) container and used <ol>

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--I created a document with the information I want to use at the beginning of all my web projects, that would include all the necessary lines (such as linking to a normalize.css file, meta lines, etc) and replaced the Replit text with that information. -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
@@ -16,9 +16,16 @@
 <h3><i>Software Developer</i></h3>
 </header>
   <main class="lt-blue">
+    <article>
   <section>
     <p>Hi y'all, I'm Patty Tracy</p>
     <p>I live in southeastern Virginia</p>
+    <h4>I'm motivated by:</h4>
+    <ol>
+      <li class="center">   A good challenge</li>
+      <li class="center">   A knotty problem to solve</li>
+      <li class="center">   Being with people</li>
+    </ol>
   </section>
     <hr>
     <section>
@@ -29,6 +36,7 @@
           <li>I’m always fascinated by learning about the different ways people do everyday things.</li>
       </ul>
     </section>
+  </article>
   </main>
     <hr>
   <footer class="contact-box border-box">
